Upgrade Next.js to 15.5.9 to address security vulnerabilities
Fixes critical RCE and server action exposure vulnerabilities in Next.js 15.5.0-15.5.7.

--- a/apps/shop/package.json
+++ b/apps/shop/package.json
@@ -21,7 +21,7 @@
     "@cloudflare/next-on-pages": "^1.13.16",
     "drizzle-orm": "^0.45.1",
     "googleapis": "^170.0.0",
-    "next": "15.5.2",
+    "next": "^15.5.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "resend": "^6.7.0",
@@ -39,7 +39,7 @@
     "@vitest/ui": "^4.0.17",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^15.5.9",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.17",
